--- a/js/settings/package.json
+++ b/js/settings/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.2",
     "axios": "^1.5.1",
+    "react-highlight-words": "^0.20.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3"
   }
